--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1187,6 +1187,7 @@
                             <b>Eventansvariga</b><br>
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
                             Olivia Wideroth, teamledare eventansvariga Stockholm<br> 
+                            Susanna Bjerke, eventansvarig Örebro<br>
                         </p>
                     ]]>
                 </target>
