Text addition, new volunteer

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1120,6 +1120,7 @@
                             <b>Eventansvariga</b><br> 
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
                             Olivia Wideroth, teamledare eventansvariga Stockholm<br>
+			    Susanna Bjerke, eventansvarig Örebro <br>
                         </p>
                     ]]>
                 </target>
