Text addition, new volunteer

--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -1025,7 +1025,8 @@
                        
                             Eventansvariga<br> 
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
-                            Olivia Wideroth, teamledare eventansvariga Stockholm<br>  
+                            Olivia Wideroth, teamledare eventansvariga Stockholm<br>
+                            Susanna Bjerke, eventansvarig Örebro<br>
                         </p>
                     ]]>
                 </target>
