Update new ambassador

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1182,7 +1182,8 @@
                             Cecilia Holmgren, grundare<br> 
                             Heydar Sheykhali, ambassadör matchning<br>  
                             Jennifer Silander, ambassadör matchning<br> 
-                            Alexander Unge, ambassadör matchning<br> 
+                            Alexander Unge, ambassadör matchning<br>
+                            Caroline Uggla, grafisk formgivning
                             <br>
                             <b>Eventansvariga</b><br>
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
