--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1116,6 +1116,7 @@
                             Heydar Sheykhali, ambassadör matchning<br>  
                             Jennifer Silander, ambassadör matchning<br> 
                             Alexander Unge, ambassadör matchning<br> 
+		 	    Caroline Uggla, grafisk formgivning<br>	
                             <br>
                             <b>Eventansvariga</b><br> 
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
