Update new ambassador

--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -1021,7 +1021,8 @@
                             Cecilia Holmgren, grundare<br> 
                             Heydar Sheykhali, ambassadör matchning<br>  
                             Jennifer Silander, ambassadör matchning<br> 
-                            Alexander Unge, ambassadör matchning<br> 
+                            Alexander Unge, ambassadör matchning<br>
+ 		 	                Caroline Uggla, grafisk formgivning<br>
                        
                             Eventansvariga<br> 
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
