--- a/app/Resources/translations/danderyd.en.xliff
+++ b/app/Resources/translations/danderyd.en.xliff
@@ -52,7 +52,7 @@
             </trans-unit>
             <trans-unit id="footer">
                 <source>footer</source>
-                <target>Kompisbyrån Danderyd drivs i samarbete med Danderyds kommun och den ideella organisationen "Alla tillsammans i Danderyd".</target>
+                <target>Kompisbyrån Danderyd is being run in collaboration with Danderyd's municipality and the non-profit organization "Alla Tillsammans i Danderyd".</target>
             </trans-unit>
             <trans-unit id="notice">
                 <source>notice</source>
