Text update welcome e-mail
Text update to make the welcome mail more general and suit all different types of friend requests.

--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -732,21 +732,21 @@
                    <p>(This message will follow in English)<br /><br /></p>
                     <p>Hej!<br /></p>
                     <p>
-                        Tack för att du har anmält dig till en kompisfika!<br><br> 
-
+                        Tack för att du har anmält dig till Kompisbyrån!<br><br>   
+                        
                         Så här går det till:<br><br>
                         
-                        1. Matchning. Vi mailar dig (oftast inom 1-30 dagar) när vi har hittat en bra matchning som har liknande 
-                        intressen som du har. (Om du skulle behöva komplettera din ansökan meddelar vi dig om detta.)<br><br>
+                        1. Matchning. Vi mailar dig (oftast inom 1-30 dagar) när vi har hittat en matchning som passar din profil.
+                        (Om du skulle behöva komplettera din ansökan meddelar vi dig om detta.)<br><br>
                         
-                        2. Bestäm ett datum. Du mailar personen inom 7 dagar och bestämmer datum, tid och plats. Skriv gärna 
-                        på svenska och engelska. Det är bådas ansvar att ni etablerar kontakt med varandra. Kom ihåg att 
+                        2. Bestäm ett datum. Du mailar personen inom 3 dagar och bestämmer datum, tid och plats för ert möte. 
+                        Skriv gärna på svenska och engelska. Det är bådas ansvar att ni etablerar kontakt med varandra. Kom ihåg att 
                         respektera varandra, att inte svara på ett mail påverkar den andra personen som har sett fram emot 
                         ett möte. Kontakta oss om du inte får svar.<br><br>  
                         
-                        3. Mötet. Ni träffas på ett kafé eller annat offentligt ställe i cirka 1 timme. Försök att inte ha 
+                        3. Mötet. Ni träffas t ex på ett kafé eller annan offentlig plats i cirka 1 timme. Försök att inte ha 
                         höga förväntningar utan ta det som det kommer. Kom i tid! De tråkiga träffarna är när någon inte 
-                        dyker upp, så byt gärna telefonnummer och skicka en sms-påminnelse dagen innan er fika som den andra 
+                        dyker upp, så byt gärna telefonnummer och skicka en sms-påminnelse dagen innan mötet som den andra 
                         personen bekräftar.<br><br>
                         
                         Om du har några frågor, vänligen skicka ett e-mail till oss :)<br><br>
@@ -754,18 +754,19 @@
                     <p>
                         Bästa hälsningar,<br />
                         Vännerna på Kompisbyrån
+
                     <p>----------------------<br /></p>
                     <p>
-                        Thank you for making a Fika friend request through Kompisbyrån!<br /><br />
+                        Thank you for making a friend request through Kompisbyrån!<br /><br />              
 
                         This is how it works:<br><br>
                         
-                        1. Match. We will send you an email (often within 1-30 days) when we have found a a good match who has 
-                        similar interests as you. (If you need to complete your application, we will let you know)<br><br>
+                        1. Match. We will send you an email (often within 1-30 days) when we have found a person who we think matches
+                        your profile. (If you need to complete your application, we will let you know)<br><br>
                         
-                        2. Decide a date. You send an email to the person within 7 days, and decide date, time and place. Write 
-                        in Swedish or English (some find Google Translate as a good tool). It is the responsibility of both that 
-                        you establish contact. Remember to respect each other, not responding an email will affect the other 
+                        2. Decide a date. You send an email to the person within 3 days, and decide date, time and place for the meeting.
+                        Write in Swedish or English (some find Google Translate to be a good tool). It is the responsibility of both that 
+                        you establish contact. Remember to respect each other, not responding to an email will affect the other 
                         person who has been looking forward to a meeting. Contact us if you don’t get an answer.<br><br>
                         
                         3. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high expectations 
