Additional term for Kompisbyrån Danderyd

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -667,9 +667,6 @@
                             städer i framtiden.
                         </li>
                         <li>
-                            Som Startkompis måste du bo i någon av följande kommuner och kunna träffas där: %municipalities%.
-                        </li>
-                        <li>
                             Kompisbyrån ansvarar endast för att länka samman personer som har bott i Sverige under kortare tid med 
                             personer som har bott i Sverige länge. 
                         </li>
@@ -717,6 +714,12 @@
                         </li>
                         <li>
                             Vi vill hela tiden bli bättre på vårt arbete. Därför kontaktar vi dig efter ert möte för att fråga hur det var.
+                        </li>
+                        <li>
+                            Till dig som skickar in en förfrågan om att bli kompis i Danderyd: Kompisbyrån i Danderyd möjliggörs i samarbete med 
+                            Danderyds kommun och den ideella organisationen “Alla Tillsammans i Danderyd”. Genom att godkänna Kompisbyråns villkor 
+                            godkänner du att personer från kommunen, samt från föreningen “Alla Tillsammans i Danderyd”, kan komma att 
+                            kontakta dig via telefon eller mail med information och stöd relaterad till din anmälan.
                         </li>
                           <p>
                             <strong>Integritetspolicy</strong>
