Additional term for Kompisbyrån Danderyd

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -675,9 +675,6 @@
                             in more cities in the future. 
                         </li>
                         <li>
-                            As a Start friend, you must live in and be able to meet in one of the following municipalities: %municipalities%.
-                        </li>
-                        <li>
                             Kompisbyrån is only responsible for linking together people who have lived in Sweden for a short time with people 
                             who have lived in Sweden for a long time.
                         </li>
@@ -721,6 +718,13 @@
                         </li>
                         <li>
                             We wish to constantly improve our work. Therefore, we will contact you after your meeting to follow up.
+                        </li>
+                        <li>
+			Additional terms if you apply to meet new friends with Kompisbyrån in Danderyd: Kompisbyrån Danderyd 
+			is being realized in cooperation with the municipality of Danderyd and the non-profit organization “Alla 
+			Tillsammans i Danderyd”. By accepting the terms and conditions for Kompisbyrån you also confirm that personnel
+ 			from the municipality of Danderyd and members from “Alla Tillsammans i Danderyd” are allowed to contact you 
+			through e-mail or by phone with information related to your application.
                         </li>
               <p>
                             <strong>Privacy policy</strong>
