--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -710,6 +710,63 @@
                         <li>
                             عند التسجيل في صفحتنا الرئيسية وعند التقدم بطلب للحصول على مطابقة صديق، فإنك توافق على معالجة كومبيسبيرون للبيانات الشخصية الخاصة بك للأغراض المذكورة.
                         </li>
+                        <li>
+                            Additional terms if you apply to meet new friends with Kompisbyrån in Danderyd: Kompisbyrån Danderyd is being realized in cooperation with the municipality of Danderyd and the non-profit organization “Alla Tillsammans i Danderyd”. By accepting the terms and conditions for Kompisbyrån you also confirm that personnel from the municipality of Danderyd and members from “Alla Tillsammans i Danderyd” are allowed to contact you through e-mail or by phone with information related to your application.
+                        </li>
+                        <p>
+                            <strong>Privacy policy</strong>
+                        </p>
+                        <p>
+                            Kompisbyrån (802492-6050) is responsible for the personal data you provide with us. 
+                        </p>
+                        <p>
+                            Kompisbyrån uses your personal data for the following purposes:                        </p>
+                        
+                            1. Kompisbyrån uses the personal data you have provided to match you up with another user. This includes 
+                                introducing the newly matched friends to one another by name.
+                       <br/>
+                            2. We might also contact you with invitations to Kompisbyrån's activities or with special offers from 
+                                Kompisbyrån. 
+                       <br/>
+                            3. The information is also being used to answer questions, operate and improve our web site and programs. 
+                       <br/>
+                            4. Your personal data might be shared with other actors if that is a necessity for Kompisbyrån to qualify 
+                               for support or grants. This may apply to public bodies or private companies that sponsor our 
+                               organization. These other actor do not have permission to use your personal data for marketing purposes
+                               or anything besides making sure our work meets their requirements.
+                       <br/>
+                            5. In addition to this, Kompisbyrån must pass on your information if this is stated by law. 
+                       <li>
+                            Kompisbyrån's handling of personal data is based on consent. When you provide your personal data by 
+                            signing up with Kompisbyrån you give us permission to use your personal data. You can at any time 
+                            withdraw your consent, we will then delete all your personal data that we have stored. You can choose 
+                            if you want us to remove all your personal data or just some of the data. 
+                       </li>
+                        <li>
+                           Your personal data will not be transferred to third country (a country outside of EU/ESS). 
+                        </li>
+                        <li>
+                            If you want to remove your account, please send an e-mail to: kontakt@kompisbyran.se 
+                        </li>
+                        <li>
+                            In addition to getting your personal data deleted upon asking, you also have the right to get your 
+                            personal data corrected, demand that the processing of your personal data is restricted and get an 
+                            excerpt of all your personal data that Kompisbyrån has saved. You also have the right to object to a 
+                            processing of a certain kind. If you want any of this, please contact: kontakt@kompisbyran.se
+                         </li>
+                         <li>
+                            Kompisbyrån will help you out if you want your personal data moved to another service. This is called 
+                            data portability and a request like this should be sent to: kontakt@kompisbyran.se
+                          </li>
+                          <li>
+                            Datainspektionen is the supervisory authority for the personal data processing and if you feel there 
+                            is an incorrect treatment, you are entitled to lodge complaints with them. You can find more information 
+                            about this <a href="https://www.datainspektionen.se/vagledningar/for-dig-som-privatperson/klagomal-och-tips/?_t_id=1B2M2Y8AsgTpgAmY7PhCfg%3d%3d&_t_q=anm%C3%A4la&_t_tags=language%3asv%2csiteid%3a994ba21f-261a-4557-a79f-e3dd826642d2&_t_ip=10.109.50.20&_t_hit.id=Datainspektionen_Web_Features_StandardPage_StandardPageType/_f2206461-c0d3-4dfc-8eca-caada2c4d500_sv&_t_hit.pos=11">here</a>.
+                          </li>
+                          <li>
+                             Kompisbyrån stores your personal data until you choose to remove it or when your account has been 
+                             inactive for 36 months.                           
+		                  </li>
                     </ul>
                     ]]></target>
             </trans-unit>
