Text update, removal of start friend mention

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -682,7 +682,7 @@
                             Everyone over 18 years (of age) can participate.
                         </li>
                         <li>
-                            The registration is for free. Any costs for refreshments/"fika" or other expenses related to the meeting must be paid by each person.
+                            The registration is free of charge. Any costs for refreshments/"fika" or other expenses related to the meeting must be paid by each person.
                         </li>
                         <li>
                             Kompisbyrån recommends that you meet for about 1 hour at a public place in the central part of that city that you have chosen. 
@@ -731,9 +731,8 @@
                         <p>
                             Kompisbyrån uses your personal data for the following purposes:                        </p>
                         
-                            1. Kompisbyrån uses the personal data you have provided to match you up with another user. For instance 
-                               fika friends or start friends. This includes introducing the newly matched friends to one another by 
-                               name.
+                            1. Kompisbyrån uses the personal data you have provided to match you up with another user. This includes 
+				introducing the newly matched friends to one another by name.
                        <br/>
                             2. We might also contact you with invitations to Kompisbyrån's activities or with special offers from 
                                 Kompisbyrån. 
@@ -742,7 +741,7 @@
                        <br/>
                             4. Your personal data might be shared with other actors if that is a necessity for Kompisbyrån to qualify 
                                for support or grants. This may apply to public bodies or private companies that sponsor our 
-                               organization. These other actor do not have permission to use your personal data for marketing purposes
+                               organization. These other actors do not have permission to use your personal data for marketing purposes
                                or anything besides making sure our work meets their requirements.
                        <br/>
                             5. In addition to this, Kompisbyrån must pass on your information if this is stated by law. 
